# learnGitCI-CD

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  arm-toolchain.cmake
.github/workflows/: ci.yml
Debug_FLASH/: BootLoader_prj.args  BootLoader_prj.elf  BootLoader_prj.map  BootLoader_prj.srec  firmware_bootloader.elf  firmware_bootloader.hex  makefile  sources.mk
Debug_FLASH/Project_Settings/Startup_Code/: startup.args  startup.d  startup_S32K144.args  subdir.mk  system_S32K144.d
Debug_FLASH/driver/src/: GPIO_driver.d  Systick_driver.d  Systick_hal.d  UART_driver.d  subdir.mk
Debug_FLASH/hal/src/: gpio_hal.d  subdir.mk
Debug_FLASH/src/: flash_driver.d  jump_to_app.d  main.d  subdir.mk
Project_Settings/Debugger/: BootLoader_prj_Debug_FLASH_PNE.launch  BootLoader_prj_Debug_RAM_PNE.launch  BootLoader_prj_Release_FLASH_PNE.launch  BootLoader_prj_Release_RAM_PNE.launch
Project_Settings/Linker_Files/: S32K144_64_flash.ld  S32K144_64_ram.ld
Project_Settings/Startup_Code/: startup.c  startup_S32K144.S  system_S32K144.c
driver/inc/: GPIO_driver.h  Systick_driver.h  Systick_hal.h  UART_driver.h  common_driver.h
driver/src/: GPIO_driver.c  Systick_driver.c  Systick_hal.c  UART_driver.c
hal/inc/: S32K144_Package.h  gpio_hal.h
hal/src/: gpio_hal.c
include/: S32K144.h  S32K144_features.h  device_registers.h  system_S32K144.h
resource_for_app/: linker_Application.ld  startup_S32K144.S
src/: flash_driver.c  flash_driver.h  jump_to_app.c  jump_to_app.h  main.c  memory_check.c  memory_check.h
test/: test.c
test/Unity/: unity.c  unity.h  unity_internals.h
